--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
         {% block header %}{% endblock %}
         {% block banner %}{% endblock %}
         {% block preloader %}{% endblock %}
+        {% block messages %}{% endblock %}
         {% block body %}{% endblock %}
         {% block footer %}{% endblock %}
         {% block javascripts %}{% endblock %}
