--- a/templates/front/layout.html.twig
+++ b/templates/front/layout.html.twig
@@ -75,6 +75,10 @@
 <!-- end preloader --> 
 {% endblock %}
 
+{% block messages %}
+{% include 'front/messages.html.twig' %}
+{% endblock %}
+
 {% block footer %}
 {% include 'front/footer.html.twig' %}
 {% endblock %}
