--- a/templates/front/mail/base.html.twig
+++ b/templates/front/mail/base.html.twig
@@ -431,7 +431,7 @@
                                         <tr>
                                             <td align="center">
                                                 {% block unsubscribe %}
-                                                <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: #5caad2; text-decoration: none;font-weight:bold;text-transform: uppercase" href="{# url('UnsubscribeURL', {'vendorId':vendor.id}) #}">{% trans into locale %}unsubscribe{% endtrans %}</a>
+                                                <!-- <a style="font-size: 14px; font-family: 'Work Sans', Calibri, sans-serif; line-height: 24px;color: #5caad2; text-decoration: none;font-weight:bold;text-transform: uppercase" href="#TODO">{% trans into locale %}unsubscribe{% endtrans %}</a>-->
                                                 {% endblock %}
                                             </td>
                                         </tr>
