--- a/templates/admin/topbar.html.twig
+++ b/templates/admin/topbar.html.twig
@@ -23,8 +23,8 @@
             <li class="{{ current_route == 'admin_service_new' ? 'active' : '' }}"><a href="{{ path('admin_service_new') }}">Ajouter nouveau</a></li>
           </ul>
         </li>
-
-        <li class="dropdown">
+        <li class="{{ current_route == 'admin_newsletter_subscribtion_list' ? 'active' : '' }}"><a href="{{ path('admin_newsletter_subscribtion_list') }}">Inscriptions newsletter</a></li>
+        <!--<li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
@@ -35,14 +35,16 @@
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
-        </li>
+        </li>-->
       </ul>
+      <!--
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      --->
       {% set locales = ['ar', 'fr', 'en'] %}
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ path('homepage') }}" target="_blank">Voir site  <i class="fa fa-external-link" aria-hidden="true"></i></a></li>
