--- a/templates/front/mail/base.html.twig
+++ b/templates/front/mail/base.html.twig
@@ -12,7 +12,7 @@
     <link href='https://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel="stylesheet">
     <!--<![endif]-->
 
-    <title>Material Design for Bootstrap</title>
+    <title>Fouras</title>
 
     <style type="text/css">
         body {
