--- a/templates/admin/layout.html.twig
+++ b/templates/admin/layout.html.twig
@@ -3,7 +3,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta name="MobileOptimized" content="320">
 {% endblock %}
-{% block title %}{% trans %}Fouras{% endtrans %}{% endblock %}
+{% block title %}{% trans %}Fouras - backoffice{% endtrans %}{% endblock %}
 {% block stylesheets %}
     <!-- theme style -->
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet" type="text/css">
@@ -56,6 +56,9 @@
 
                 reader.readAsDataURL(e.target.files[0]);
             });
+
+
+            $(".datepicker").datepicker();
         });
     </script>
 {% endblock %}
